# kden-stock

./: .env  README.md  main.py  pyproject.toml  requirements.txt
module/: gcp_server.py  stock_etl.py
